# scatto

./: Cargo.toml  Makefile  README.md
docs/adr/: 0001-single-key-app-hints.md
src/: config.rs  ewmh.rs  icon.rs  keymap.rs  main.rs  popup.rs  render.rs
